Alteração de media query

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="menu">
               <li><a href="#">Home</a></li>
               <li><a href="#">Preços</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="#" class="contact">Contato</a></li>
               <li><a href="#" class="btn-item">Entrar</a></li>
             </ul>
           </div>
